<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestCPUser</string>
    <string name="menu_settings">Settings</string>
    <string name="display_names">Display names</string>
    <string name="sendintent">sendIntent</string>
    <string name="intent_broadcast">intent BroadCast</string>
    <string name="intent_activity">intent activity</string>
    <string name="intent_service">intent service</string>
    <string name="start_camera">start Camera</string>
    <string name="pick_contacts">pick contacts</string>

</resources>