<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDisplayNames"
        android:text="@string/display_names" />

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="false"
        android:ems="10" />

    <Button
        android:id="@+id/btnIntentBroadCast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickedIntentBroadCast"
        android:text="@string/intent_broadcast" />

    <Button
        android:id="@+id/btnIntentStartActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickedIntentStartActivity"
        android:text="@string/intent_activity" />

    <Button
        android:id="@+id/btnIntentStartCamera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickedIntentStartCamera"
        android:text="@string/start_camera" />

    <Button
        android:id="@+id/btnIntentContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickedIntentStartContact"
        android:text="@string/pick_contacts" />

    <Button
        android:id="@+id/btnIntentStartService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickedIntentStartService"
        android:text="@string/intent_service" />
</LinearLayout>